--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,50 @@
 <header>
-    <!-- header inner -->
-    <div class="header">
-       <div class="container">
-          <div class="row">
-             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                <div class="full">
-                   <div class="center-desk">
-                      <div class="logo">
-                         <a href="index.html"><img src="../../assets/images/logo.png" alt="#" /></a>
-                      </div>
-                   </div>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
-    <app-navbar></app-navbar>
-  </header>
+
+<div class="header">
+   <div class="container">
+      <div class="row">
+         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+            <div class="full">
+               <div class="center-desk">
+                  <div class="logo">
+                     <a href="index.html"><img src="../../assets/images/logo.png" alt="#" /></a>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+            <nav class="navigation navbar navbar-expand-md navbar-dark ">
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarsExample04">
+                  <ul class="navbar-nav mr-auto">
+                     <li class="nav-item active">
+                        <a class="nav-link" routerLink="/Home">Home</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" routerLink="/About">About</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" routerLink="/Services">Services</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" routerLink="/News">News</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" routerLink="/Trainer">Trainer</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" routerLink="/Gallery">Gallery</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" routerLink="/ContactUs">Contact Us</a>
+                     </li>
+                  </ul>
+               </div>
+            </nav>
+         </div>
+      </div>
+   </div>
+</div>
+</header>
